@@ -1,3 +1,14 @@
+2011-10-13  Julien Chaffraix  <jchaffraix@webkit.org>
+
+        Remove layerX / layerY from the Chromium API
+        https://bugs.webkit.org/show_bug.cgi?id=70052
+
+        Reviewed by Darin Fisher.
+
+        * public/WebDOMMouseEvent.h:
+        * src/WebDOMMouseEvent.cpp:
+        Just remove the 2 properties without considering the ABI stability.
+
 2011-10-13  Nico Weber  <thakis@chromium.org>
 
         [chromium] Automatically pull clang on `update-webkit --chromium` on mac
